# src/controller/authController.ts
@@ -17,9 +17,22 @@ export class AuthController extends Controller {
 	 *
 	 */
 	@SuccessResponse(201)
-	@Post()
+	@Post('/signup')
 	public async signup(@Body() body: AuthInput) {
 		const res = await this.authService.signup(body)
+		if (typeof res === 'string') return ControllerUtils.handleResponse(res, this)
+		this.setHeader('Authorization', `Bearer ${res.token}`)
+		return
+	}
+
+	/**
+	 * Signin the user in the system
+	 *
+	 */
+	@SuccessResponse(200)
+	@Post('/signin')
+	public async signin(@Body() body: Pick<AuthInput, 'email' | 'password'>) {
+		const res = await this.authService.signin(body)
 		if (typeof res === 'string') return ControllerUtils.handleResponse(res, this)
 		this.setHeader('Authorization', `Bearer ${res.token}`)
 		return
